--- a/src/components/map/map-viewer.css
+++ b/src/components/map/map-viewer.css
@@ -7,16 +7,18 @@
 
 .overlay {
   position: fixed;
-  width: 100vw;
-  height: 100vh;
-  background: rgba(255, 255, 255, 0.6);
-  pointer-events: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 999;
+  pointer-events: none; /* No permitir clics en elementos detrás del modal */
 }
 
-.overlay > Button {
+/*.overlay > Button {
   pointer-events: all;
-}
+}*/
