--- a/src/App.css
+++ b/src/App.css
@@ -2,27 +2,66 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", Helvetica, sans-serif;
+  --light-grey: #b4c7d7;
+}
+
+.hidden {
+  visibility: collapse;
 }
 
 .full-screen {
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
   position: absolute;
 }
 
+.full-width {
+  width: 100%;
+}
+
 .thumbnail {
-  background: rgba(131, 131, 131, 0.8);
-  padding: 5px 10px;
-  color: white;
-  font-weight:bold;
-  border: rgb(255, 255, 255) 1px solid;
-  /*border-radius: 100%;*/
+  background: rgba(230, 230, 230, 0.7);
+  padding: 10px;
+  border-radius: 100%;
+  border: 5px solid white;
   pointer-events: all;
-  /*transition: background-color 0.2s ease-in-out;*/
+  transition: background-color 0.2s ease-in-out;
 }
 
 .thumbnail:hover {
-  background-color: rgb(0, 87, 201);
+  background-color: rgb(255, 255, 255);
   cursor: pointer;
+}
+
+/* Remove arrows from number inputs */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.ifcjs-dimension-label {
+  background-color: black;
+  font-family: sans-serif;
+  color: white;
+  padding: 8px;
+  border-radius: 8px;
+  pointer-events: all;
+  transition: background-color 200ms ease-in-out;
+}
+
+.ifcjs-dimension-label:hover {
+  background-color: grey;
+}
+
+.ifcjs-dimension-preview {
+  background-color: #ffffff;
+  width: 2rem;
+  height: 2rem;
+  opacity: 0.3;
+  padding: 8px;
+  border-radius: 100%;
 }
