--- a/src/components/map/scanner.css
+++ b/src/components/map/scanner.css
@@ -1,17 +1,20 @@
 .scanner {
-  position: absolute;
-  z-index: 1;
-  top: calc(50vh - 175px);
-  border-radius: 15px;
   background-color: #fff;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  border-radius: 5px;
+  z-index: 10000;
+  pointer-events: auto; /* Permitir clics en elementos dentro del modal */
 }
 
 .scanner-exit {
-  text-align: right;
-  padding-right: 16px;
-  font-weight: 800;
+  position: relative;
+  /*text-align: right;*/
+  float: right;
+  margin-left: auto;
+  font-weight: 600;
   cursor: pointer;
+  font-family: Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  z-index: 400;
 }
 
 .scanner-container {
