scan interface update

--- a/src/components/map/map-viewer.css
+++ b/src/components/map/map-viewer.css
@@ -26,3 +26,11 @@
 .overlay p {
   padding: 8px;
 }
+
+.gis-button-container {
+  display: flex;
+  margin: 1rem;
+  flex-direction: column;
+  max-width: 150px;
+  gap: 10px;
+}
