--- a/src/components/map/map-viewer.css
+++ b/src/components/map/map-viewer.css
@@ -36,8 +36,12 @@
   margin: 1rem;
   flex-direction: column;
   width: 300px;
-  gap: 10px;
   background-color: white;
   z-index: 400000;
-  padding: 10px;
+}
+
+.bottom-toolbar {
+  display: flex;
+  max-width: 100px;
+  column-gap: 10px;
 }
