--- a/src/components/bottom-toolbar/bottom-menu.css
+++ b/src/components/bottom-toolbar/bottom-menu.css
@@ -1,6 +1,6 @@
 .bottom-menu {
   position: absolute;
-  height: 3rem;
+  height: 1rem;
   bottom: 1rem;
   left: 50%;
   transform: translateX(-50%);
@@ -10,7 +10,6 @@
 }
 
 .bottom-menu-content {
-  padding: 0 !important;
-  height: 100%;
-  width: 100%;
+  display: flex;
+  align-items: center;
 }
