--- a/src/components/search-toolbar/search-menu.css
+++ b/src/components/search-toolbar/search-menu.css
@@ -1,7 +1,7 @@
 .search-menu {
   /*background-color: white;*/
   position: absolute;
-  top: 1rem;
+  top: 10px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
