--- a/src/App.css
+++ b/src/App.css
@@ -65,3 +65,11 @@ input::-webkit-inner-spin-button {
   padding: 8px;
   border-radius: 100%;
 }
+
+.mapboxgl-ctrl-logo {
+  display: none !important;
+}
+
+.mapboxgl-ctrl-attrib {
+  display: none !important;
+}
