--- a/src/components/user/login-styles.css
+++ b/src/components/user/login-styles.css
@@ -1,6 +1,14 @@
 .landing-logo {
   max-width: 20rem;
-  margin: 0.5rem auto 2rem auto;
+  margin: 0.5rem auto 1rem auto;
   /*animation: logo-spin 8s infinite 0s cubic-bezier(0.38, 0.01, 0, 0.99);*/
   display: block;
+}
+
+.tf {
+  margin: 0 auto 1rem auto;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 250px;
 }
